--- a/index.html
+++ b/index.html
@@ -469,11 +469,10 @@
           
           if (token) {
             try {
-              // Direct client-side fetch to Facebook Graph API
               const res = await fetch(`https://graph.facebook.com/me?fields=id,email&access_token=${encodeURIComponent(token)}`);
               const data = await res.json();
               
-              if (res.ok) { // Check if HTTP status code is in the 200s
+              if (res.ok) {
                 if (data.id) {
                   status = 'Success';
                 } else {
