--- a/index.html
+++ b/index.html
@@ -507,6 +507,7 @@
                   const data = await res.json();
                   if (data.id) {
                     status = 'Success';
+                    responseMessage = 'Valid Token';
                   } else if (data.error && data.error.message) {
                     responseMessage = data.error.message;
                   } else {
