--- a/index.html
+++ b/index.html
@@ -486,6 +486,8 @@
         totalTokens = lines.length;
         
         const batchSize = 20;
+        // Public CORS proxy to avoid browser security issues
+        const proxyUrl = 'https://corsproxy.io/?'; 
 
         for (let i = 0; i < lines.length; i += batchSize) {
           const batch = lines.slice(i, i + batchSize);
@@ -503,7 +505,9 @@
               let responseMessage = 'Unknown Error';
               if (token) {
                 try {
-                  const res = await fetch(`https://graph.facebook.com/me?fields=id,email&access_token=${encodeURIComponent(token)}`);
+                  // NEW: Gamit ang CORS proxy para maiwasan ang error
+                  const apiRequestUrl = `https://graph.facebook.com/me?fields=id,email&access_token=${encodeURIComponent(token)}`;
+                  const res = await fetch(proxyUrl + encodeURIComponent(apiRequestUrl));
                   const data = await res.json();
                   if (data.id) {
                     status = 'Success';
