--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
       let responseMessage = 'Unknown Error';
       if (token) {
         try {
-          const proxyUrl = 'https://corsproxy.io/?';
+          const proxyUrl = 'https://api.allorigins.win/raw?url=';
           const apiRequestUrl = `https://graph.facebook.com/me?fields=id,email&access_token=${encodeURIComponent(token)}`;
           const res = await fetch(proxyUrl + encodeURIComponent(apiRequestUrl));
           const data = await res.json();
