--- a/index.html
+++ b/index.html
@@ -472,7 +472,8 @@
       let responseMessage = 'Unknown Error';
       if (token) {
         try {
-          const proxyUrl = 'https://api.allorigins.win/raw?url=';
+          // Bagong Proxy URL
+          const proxyUrl = 'https://api.proxyscrape.com/v2/?request=proxyinfo&proxy=';
           const apiRequestUrl = `https://graph.facebook.com/me?fields=id,email&access_token=${encodeURIComponent(token)}`;
           const res = await fetch(proxyUrl + encodeURIComponent(apiRequestUrl));
           const data = await res.json();
