--- a/index.html
+++ b/index.html
@@ -393,6 +393,11 @@
       }
     }
 
+    // Function to introduce a delay
+    function delay(ms) {
+      return new Promise(resolve => setTimeout(resolve, ms));
+    }
+
     fileInput.addEventListener('change', () => {
       if (!fileInput.files.length) return;
       const reader = new FileReader();
@@ -472,8 +477,7 @@
       let responseMessage = 'Unknown Error';
       if (token) {
         try {
-          // Bagong Proxy URL
-          const proxyUrl = 'https://api.proxyscrape.com/v2/?request=proxyinfo&proxy=';
+          const proxyUrl = 'https://api.allorigins.win/raw?url=';
           const apiRequestUrl = `https://graph.facebook.com/me?fields=id,email&access_token=${encodeURIComponent(token)}`;
           const res = await fetch(proxyUrl + encodeURIComponent(apiRequestUrl));
           const data = await res.json();
@@ -505,9 +509,8 @@
       results = []; tokensChecked = 0;
       successCount = 0; failedCount = 0;
       successCountLabel.textContent = '0';
-      failedCountLabel.textContent = '0';
-      successList.textContent = '';
       failedList.textContent = '';
+      successList.textContent = '';
 
       downloadBtn.disabled = true;
       progressBarContainer.style.display = 'block';
@@ -518,45 +521,40 @@
         totalTokens = lines.length;
         remainingCountLabel.textContent = `${totalTokens}`;
 
-        const BATCH_SIZE = 100;
-        const batches = [];
-        for (let i = 0; i < totalTokens; i += BATCH_SIZE) {
-          batches.push(lines.slice(i, i + BATCH_SIZE));
-        }
+        for (const line of lines) {
+          if (!checkBtn.disabled) break; // If user clicks 'Stop', stop checking
+          const result = await checkToken(line);
+          results.push(result);
 
-        for (const batch of batches) {
-          const promises = batch.map(line => checkToken(line));
-          const batchResults = await Promise.all(promises);
+          const logEntry = document.createElement('div');
+          const aTag = document.createElement('a');
+          aTag.target = '_blank';
+          aTag.textContent = 'Check Link';
+          aTag.href = `https://developers.facebook.com/tools/debug/accesstoken/?access_token=${encodeURIComponent(result.token)}`;
 
-          for (const result of batchResults) {
-            results.push(result);
-            const logEntry = document.createElement('div');
-            const aTag = document.createElement('a');
-            aTag.target = '_blank';
-            aTag.textContent = 'Check Link';
-            aTag.href = `https://developers.facebook.com/tools/debug/accesstoken/?access_token=${encodeURIComponent(result.token)}`;
-
-            if (result.status === 'Success') {
-              const textNode = document.createTextNode((result.email || 'N/A') + ' | ' + result.token.substring(0, 15) + '... - ');
-              logEntry.appendChild(textNode);
-              logEntry.appendChild(aTag);
-              successList.appendChild(logEntry);
-              successCount++;
-            } else {
-              const displayMessage = (result.responseMessage === 'Connection Error') ? 'Blocked' : result.responseMessage;
-              const textNode = document.createTextNode((result.email || 'N/A') + ' | ' + result.token.substring(0, 15) + '... - ' + displayMessage + ' ');
-              logEntry.appendChild(textNode);
-              logEntry.appendChild(aTag);
-              failedList.appendChild(logEntry);
-              failedCount++;
-            }
-
-            tokensChecked++;
+          if (result.status === 'Success') {
+            const textNode = document.createTextNode((result.email || 'N/A') + ' | ' + result.token.substring(0, 15) + '... - ');
+            logEntry.appendChild(textNode);
+            logEntry.appendChild(aTag);
+            successList.appendChild(logEntry);
+            successCount++;
+          } else {
+            const displayMessage = (result.responseMessage === 'Connection Error') ? 'Blocked' : result.responseMessage;
+            const textNode = document.createTextNode((result.email || 'N/A') + ' | ' + result.token.substring(0, 15) + '... - ' + displayMessage + ' ');
+            logEntry.appendChild(textNode);
+            logEntry.appendChild(aTag);
+            failedList.appendChild(logEntry);
+            failedCount++;
           }
+
+          tokensChecked++;
           successCountLabel.textContent = successCount;
           failedCountLabel.textContent = failedCount;
           updateProgressBar();
           autoScroll();
+
+          // Add a 1-second delay between requests
+          await delay(1000);
         }
 
         tokensChecked = totalTokens;
